--- a/style.css
+++ b/style.css
@@ -8,5 +8,10 @@ body {
 
 #indication_vie {
     color: red;
-    margin-left: 42%;
+    margin-left: 44%;
+}
+
+#chronometre {
+    color: red;
+    margin-left: 46%;
 }
